# sync-ait

./: .gitignore  .gitignore_global  FAQ.md  LICENSE  OAT.xml  OWNERS  README.md  foo.txt  locat_accuracy.py  sample.py  setup.py
ait/: README.md  install.bat  install.sh  main.py  requirements.txt  setup.py  公网URL使用说明.csv  公网URL使用说明.md
ait/components/: __main__.py
ait/components/analyze/: FAQ.md  README.md  __init__.py  main.py  requirements.txt  setup.py
ait/components/atbcmp/: __main__.py  setup.py
ait/components/atbcmp/backend/: CMakeLists.txt  atb_probe.cpp  binfile.cpp  binfile.h
ait/components/atbdump/: __init__.py  __main__.py  atb_probe.h  setup.py
ait/components/benchmark/: MANIFEST.in  README.md  __init__.py  build.sh  requirements.txt  setup.py
ait/components/benchmark/backend/concur/: CMakeLists.txt  README.md  build.sh  cnpy.cpp  cnpy.h  concur.cpp  install.sh  utils.cpp  utils.h
ait/components/convert/: FAQ.md  README.md  __init__.py  build.sh  requirements.txt  setup.py
ait/components/debug/: __init__.py  main.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/: CMakeLists.txt  acl_metadata.py  allreduce.py  atb_need.h  cmp_algorithm.py  compare.py  constant.py  initial.py  save_tensor.cpp  tensor_util.cpp  tensorutil.cpp  utils.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/: __init__.py  hook.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/advisor/: advisor.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/common/: utils.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/compare/: acc_compare.py  distributed_compare.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/debugger/: debugger_config.py  precision_debugger.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/dump/: dump.py  utils.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/hook_module/: hook_module.py  register_hook.py  support_wrap_ops.yaml  wrap_distributed.py  wrap_functional.py  wrap_npu_custom.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/online_dispatch/: __init__.py  dispatch.py  dump_compare.py  unsupport_torch_ops.yaml  utils.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/overflow_check/: info_dump.py  overflow_check.py  utils.py
ait/components/debug/compare/msquickcmp/pta_acl_cmp/pt_dump/parse_tool/lib/: compare.py  config.py  interactive_cli.py  parse_exception.py  parse_tool.py  utils.py  visualization.py
ait/components/llm/: README.md  llmzip  requirements.txt  setup.py
ait/components/llm/llm/dump/backend/: CMakeLists.txt  atb_probe.cpp  atb_probe.h  atb_speed_probe.cpp  atb_speed_probe.h  binfile.h  build.sh
ait/components/llm/llm/opcheck/test_framework/: CMakeLists.txt  build.sh
ait/components/llm/llm/opcheck/test_framework/atb_torch/operation/: hosttensor_binder_creator.cpp  hosttensor_binder_creator.h  operation_creator.cpp  operation_creator.h  operation_torch.cpp  operation_torch.h
ait/components/llm/llm/opcheck/test_framework/atb_torch/operation/hosttensor_binders/: selfattention_binder.h
ait/components/llm/llm/opcheck/test_framework/atb_torch/utils/: utils.cpp  utils.h
ait/components/llm/llm/opcheck/test_framework/dependency/: filesystem.cpp  filesystem.h
ait/components/llm/llm/opcheck/test_framework/dependency/atb/: infer_op_params.h  log.h  train_op_params.h
ait/components/llm/llm/opcheck/test_framework/test_utils/context/: buffer_base.cpp  buffer_base.h  memory_context.cpp
ait/components/parser/: parser.py
ait/components/profile/: __init__.py
ait/components/tensor_view/: README.md  __init__.py  main_cli.py  setup.py
ait/components/tests/: test_ait.sh
ait/components/transplt/: DockerFile  Dockerfile  README.md  __init__.py  config.ini  install.bat  install.sh  porting_advisor.py  requirements.txt  setup.py
ait/components/utils/: file_open.py  file_open_check.py  install.py  parser.py  security_check.py  security_type.py  util.py
ait/docs/: index.html  menu.md
ait/docs/benchmark/: API_GUIDE.md  FAQ.md  README.md  temp.md
ait/docs/convert/: FAQ.md  README.md
ait/docs/install/: FAQ.md  README.md
ait/docs/llm/:  llm大模型推理精度工具功能说明_v0.2.2.md  README copy 2.md  README copy 3.md  README copy 4.md  README copy 5.md  README copy 6.md  README copy.md  README.md  README.md~HEAD  TorchAir场景-整网算子精度比对.md  llm大模型推理精度工具功能说明_v0.1.0.md  llm大模型推理精度工具功能说明_v0.2.0.md  llm大模型推理精度工具功能说明_v0.2.1.md  llm大模型推理精度工具功能说明_v0.2.2.md  llm浮点模型layer层稀疏量化迁移.md  torchair 图模式精度比对.md  torchair图模式精度比对.md  加速库场景-整网精度比对.md  在线推理DUMP功能使用说明.md  工具-DUMP在线推理数据使用说明.md  工具-精度预检使用说明.md  工具-自动比对功能使用说明.md  手动映射比对能力说明.md  精度预检功能使用说明.md  (+4 more)
ait/ide/: build.gradle
amit/: __main__.py  amit_cli.py  setup.py
amit/common/: options.py
amit/debug/: __main__.py  debug.py
amit/profile/: profile.py
auto-optimizer/test/: test_knowledge_dynamic_reshape.py  test_node_common.py
components/analyze/: README.md
components/debug/: __init__.py
components/profile/: __init__.py
docs/: README.md  start-page.md
docs/benchmark/: README.md
docs/llm/: README.md
ide/: README.md  build.gradle  build.sh  build_ide.sh  settings.gradle
netron-6.8.2/tools/: nnabla_script.py
onnx-modifier/: Dockerfile  NOTICE  app.py  app_desktop.py  flaskserver.py  forge.config.js  onnx_modifier.py  package-lock.json  package.json  readme.md  readme_zh-CN.md  requirements.txt  rpc.py  server-flask.py  server.py  公网URL使用说明.csv
onnx-modifier/electron/: electron.js  preload.js
onnx-modifier/static/: app.js  base.js  dagre.js  electron.html  electron.js  flatbuffers.js  index.html  index.js  json.js  modifier.js  numpy.js  om-metadata.json  om-proto.js  om.js  onnx-proto.js  onnx-schema.js  onnx.js  pickle.js  protobuf.js  python.js  tar.js  view-grapher.css  view-grapher.js  view-main-page.css  view-sidebar.css  view-sidebar.js  view-toolbar.css  view.js  xml.js  zip.js
onnx-modifier/templates/: index.html
onnx-modifier/test/: test_server.py
onnx-modifier/tests/: test_server.py
onnx-modifier/utils/: __init__.py  make_nodes.py  parse_tools.py
(+1537 files in other folders)
